# android-ndk-opengl

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: triangle_f.frag  triangle_v.vert
app/src/main/assets/shaders/: color_id_f.frag  light_f.frag  object_f.frag  object_v.vert  stencil_f.frag  triangle_f.frag  triangle_v.vert
app/src/main/assets/shaders/line/: line_c.comp  line_v.vert
app/src/main/assets/shaders/particles/: particles_c.comp  particles_f.frag  particles_v.vert
app/src/main/assets/shaders/screen/: screen_f.frag  screen_v.vert
app/src/main/cpp/: CMakeLists.txt  GameRendererBridge.cpp  ResourcesBridge.cpp
app/src/main/cpp/asset/: AssetManager.cpp  AssetManager.h
app/src/main/cpp/assets/: AssetManager.cpp  AssetManager.h
app/src/main/cpp/game/: GameEventsHandler.cpp  GameGLConfig.cpp  GameRenderer.cpp  GameRenderer.h  GameRendererBridge.cpp  GameRendererLogics.cpp  GameWorldLogic.cpp  ObjectLogics.cpp  WorldLogic.cpp
app/src/main/cpp/game/camera/: Camera.cpp  Camera.h
app/src/main/cpp/game/environment/: Environment.cpp  Environment.h
app/src/main/cpp/game/light/: Attenuation.cpp  Attenuation.h  Light.cpp  Light.h
app/src/main/cpp/game/objects/: GLObject.cpp  GLObject.h  GLObjectImpl.cpp  GameObject.h
app/src/main/cpp/game/objects/2d/particles/: Particles.cpp  Particles.h  ParticlesData.cpp  ParticlesData.h
app/src/main/cpp/game/objects/2d/ui/: LineObject.cpp  LineObject.h
app/src/main/cpp/game/objects/3d/: GLObject.cpp  GLObject.h
app/src/main/cpp/game/objects/3d/data/: GLObjectData.h
app/src/main/cpp/game/objects/3d/primitives/: Cube.h  Plane.h
app/src/main/cpp/game/objects/3d/texture/: Texture.h
app/src/main/cpp/game/objects/base/: GLObject.h  GLObjectImpl.cpp  GameObject.h  GameObjectData.h  ShadersPaths.h  Translation.h  Uniforms.h
app/src/main/cpp/game/objects/box/: Box.cpp  Cube.h
app/src/main/cpp/game/objects/primitives/: Cube.h  Plane.h
app/src/main/cpp/game/objects/shaders/: Program.h  Uniforms.h
app/src/main/cpp/game/objects/triangle/: Box.cpp  Triangle.cpp
app/src/main/cpp/game/objects/ui/: LineObject.cpp  LineObject.h
app/src/main/cpp/game/objects/uniform/: Uniforms.h
app/src/main/cpp/game/screen/: Screen.cpp  Screen.h  ScreenRect.cpp
app/src/main/cpp/game/uievents/: TouchDown.h
app/src/main/cpp/game/utils/: MathUtils.cpp  MathUtils.h  OpenglUtils.cpp  OpenglUtils.h  ShaderUtil.cpp  ShaderUtil.h
app/src/main/cpp/object_loader/: ObjectLoader.cpp  ObjectLoader.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
